# immiclaw-test

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
config/: settings.yaml
config/scenarios/: example.yaml  journey-case-workflow.yaml  journey-file-management.yaml  qmr-journey-case-workflow.yaml  qmr-journey-file-management.yaml  qmr-journey-hub-to-blog-post.yaml  qmr-journey-new-user.yaml  qmr-login.yaml  qmr-smoke-blog-list.yaml  qmr-smoke-blog-post.yaml  qmr-smoke-case-create.yaml  qmr-smoke-case-list.yaml  qmr-smoke-case-manage.yaml  qmr-smoke-chat-assessment.yaml  qmr-smoke-chat-basic.yaml  qmr-smoke-chat-interaction.yaml  qmr-smoke-editor.yaml  qmr-smoke-file-browse.yaml  qmr-smoke-file-upload.yaml  qmr-smoke-home.yaml  qmr-smoke-login-error.yaml  qmr-smoke-register.yaml  qmr-smoke-settings.yaml  qmr-smoke-todo.yaml  smoke-case-create.yaml  (+7 more)
config/scenarios.legacy-immiclaw-2026-03-21/: journey-new-user.yaml  smoke-case-list.yaml  smoke-chat-assessment.yaml  smoke-file-upload.yaml  smoke-login-error.yaml
docs/: llm-prompt-feedback-protocol-v1.md
immiclaw_test/: __init__.py  agent.py  agent_context.py  agent_runner.py  browser.py  config.py  executor.py  llm.py  llm_backends.py  locator_resolver.py  models.py  observer.py  playwright_tools.py  reporter.py  skill_loader.py  tool_models.py  tool_runtime.py
tests/: conftest.py  test_agent_feedback_truncate.py  test_agent_skills.py  test_executor_compile.py  test_llm_proxy_config.py  test_main_tool_runner.py  test_skill_loader.py  test_task_cli.py  test_task_config.py
(+41 files in other folders)
