[project]
name = "immiclaw-test"
version = "0.1.0"
description = "LLM-driven Playwright web testing tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.29.0",
    "playwright>=1.58.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
